gccida/c3/swap_sort
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_sort/src/haifa-sched.c:1337:22: error: use of undeclared identifier 'invalid_operation'; did you mean 'bitmap_operation'?
v7 = ( v6 - 1 < 0) ^ __OFADD__( -1LL, v6) | ( v6 == 1); 
                     ^~~~~~~~~~~~~~~~~~~~
                     bitmap_operation
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_sort/src/haifa-sched.c:1122:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_sort/src/bitmap.h:81:12: note: 'bitmap_operation' declared here
extern int bitmap_operation PARAMS ((bitmap, bitmap, bitmap, enum bitmap_bits));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_sort/src/haifa-sched.c:1337:20: error: invalid operands to binary expression ('int' and 'int (bitmap, bitmap, bitmap, enum bitmap_bits)' (aka 'int (struct bitmap_head_def *, struct bitmap_head_def *, struct bitmap_head_def *, enum bitmap_bits)'))
v7 = ( v6 - 1 < 0) ^ __OFADD__( -1LL, v6) | ( v6 == 1); 
     ~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/swap_sort/src/obj/haifa-sched.o] Error 1
